# acfortformat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.py  pyproject.toml
examples/: error_handling_example.py  file_io_example.py  simple_read_write.py
src/acfortformat/: __init__.py  _version.py  exceptions.py  readers.py  writers.py
tests/: basic_tests.py
